@@ -1,36 +1,38 @@
 buildscript {
-    ext.kotlin_version = '1.6.21'
+    ext.kotlin_version = '2.0.21'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.android.tools.build:gradle:8.5.2'
+        classpath 'com.google.gms:google-services:4.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jlleitschuh.gradle:ktlint-gradle:10.3.0"
+        classpath 'org.jlleitschuh.gradle:ktlint-gradle:12.1.0'
     }
 }
 
 plugins {
-    id "org.jlleitschuh.gradle.ktlint" version "10.3.0"
-    id "io.gitlab.arturbosch.detekt" version "1.20.0"
-    id "io.snyk.gradle.plugin.snykplugin" version "0.4"
+    id 'com.google.devtools.ksp' version '2.0.21-1.0.28' apply false
+    id 'io.gitlab.arturbosch.detekt' version '1.23.4'
+    id 'io.snyk.gradle.plugin.snykplugin' version '0.5'
+    id 'org.jetbrains.kotlin.android' version '2.0.21' apply false
+    id 'org.jlleitschuh.gradle.ktlint' version '12.1.0'
 }
 
 repositories {
     mavenCentral()
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDirectory
 }
 
 allprojects { project ->
     dependencyLocking {
         lockAllConfigurations()
     }
-    task resolveAndLockAll {
+    tasks.register('resolveAndLockAll') {
         doFirst {
             assert gradle.startParameter.writeDependencyLocks
         }
@@ -40,6 +42,15 @@ allprojects { project ->
                 it.canBeResolved
             }.each { it.resolve() }
         }
+    }
+}
+
+subprojects {
+    tasks.withType(Test).configureEach {
+        jvmArgs = jvmArgs + [
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED'
+        ]
     }
 }
 
